# SCPD_FFF

./: .gitignore  CMakeLists.txt  README.md  appendice.md  bench_shm.sh  graphs.ipynb  makefile  run_test.sh  sum_gamefitness.py  time.prof  todo.md
bench/256/: sum_gameandfitness.py
bench/results/seq/: time.prof
bench/results/shm/: time.prof
bench/results2/mpi/: shm_2048.time.prof
bench/results2/seq128/: time.prof
bench/results2/seq32/: time.prof
bench/settings/: hostfile  hostfile_shm  settings3.hpp  settings4.hpp  settings5.hpp  settings_mseq2048.hpp  settings_mshm2048.hpp  settings_shm.hpp  settingsm1.hpp  settingsm2.hpp  settingsm3.hpp  settingsm4.hpp
cgl/: CMakeLists.txt  cgl.cpp  cgl.hpp  cgl_eval.hpp  cgl_mp.hpp  cgl_test.cpp  err  ga.hpp
cgl_mp/: CMakeLists.txt  cgl_mp.cpp  cgl_mp.hpp  cgl_mp_test.cpp  makefile  partition.hpp
cgl_mpi/: 2048.time.0.prof  2x4.time.0.prof  3x4.time.0.prof  README  makefile  mpi_main.cpp  settings.hpp  time.1.prof  time.10.prof  time.11.prof  time.2.prof  time.3.prof  time.4.prof  time.5.prof  time.6.prof  time.7.prof  time.8.prof  time.9.prof  time.prof
cgl_seq/: CMakeLists.txt  callgrind.out.17183  cgl  cgl.cpp  cgl.hpp  cgl_main.cpp  cgl_test  cgl_test.cpp  makefile  seq  seq_main.cpp  settings.hpp
cgl_shm/: makefile  partition.hpp  settings.hpp  shm_main.cpp  shm_test.cpp
ga/: main.cpp
include/: settings.hpp
libcgl/: libcgl.hpp  libcgl_test.hpp  libga.hpp  util.hpp
mpi/: README.md  main.cpp  makefile  mpi  mpi_cgl  mpi_dbg  mpi_main.cpp  mpi_scat.cpp  out.valg  prova.cpp  run.sh  settings.hpp
(+208 files in other folders)
